--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
 							I Started My Career in early 2000 as a security and network architect, working on tecnologies like VPNs and firewalls.</p>
 								<p>i few years later, Linux started jumping into unix territory, so i moved to systems admining and started working on migrating old unix systems to linux.</p>
 								<p>big compagnies also started moving from novell  to Microsoft, thats why i also jumped to the Microsoft world, just in time when technologies like active directory and sql server started to shine.</p>
-								<p>enuf history, the last few years i moved toward the cloud , public, private, or hybrid .. you name it!.
-								now a days im working with technologies like kubernetes, cloud migrations and integrations like SSOs ..etc.</p>
+								<p>enuf history, the last few years i moved to the cloud , public, private, or hybrid .. you name it!.
+								nowadays im working with technologies like kubernetes, cloud migrations and integrations like SSOs ..etc.</p>
 								<p>with soon to be 20 years in the field, its hard to mention all the work and technologies i worked with.. so if you have a question...drop me a line :)</p>
 							</div>
 							<div class="about-button">
