--- a/index2.html
+++ b/index2.html
@@ -9,7 +9,6 @@
 </head>
 
 <body>
-    <!-- Header Section -->
     <header id="header">
         <div class="container header-container">
             <h1 class="header-title">Adil Hanifi</h1>
@@ -24,158 +23,152 @@
         </div>
     </header>
 
-    <!-- About Section -->
     <section id="about" class="section">
         <div class="container">
             <h2>About Me</h2>
             <p>
-                Senior cybersecurity and cloud professional with 20+ years of experience in Security Operations (SOC),
-                Cloud Security, DevSecOps, and Infrastructure Architecture. Proven expertise in incident response, threat
-                hunting, SIEM/SOAR automation, compliance, and securing hybrid enterprise environments. Strong background
-                supporting government and regulated organizations aligned with NIST, ITSG-33, PBMM, and CIS frameworks.
+                Senior cybersecurity and cloud professional with over 20 years of experience in Security Operations, Cloud Security,
+                DevSecOps, and Infrastructure Architecture. Expertise in incident response, threat hunting, SIEM/SOAR automation,
+                compliance, and securing hybrid enterprise environments. Strong background supporting government and regulated
+                organizations aligned with NIST, ITSG-33, PBMM, and CIS frameworks.
             </p>
+
+            <div class="skills">
+                <h3>Skills</h3>
+                <div class="skill">
+                    <p>Security Operations & SOC</p>
+                    <div class="progress">
+                        <div class="bar" style="width: 95%;"></div>
+                    </div>
+                </div>
+                <div class="skill">
+                    <p>Cloud Security & Compliance</p>
+                    <div class="progress">
+                        <div class="bar" style="width: 95%;"></div>
+                    </div>
+                </div>
+                <div class="skill">
+                    <p>DevSecOps / Automation</p>
+                    <div class="progress">
+                        <div class="bar" style="width: 90%;"></div>
+                    </div>
+                </div>
+                <div class="skill">
+                    <p>Networking & Infrastructure</p>
+                    <div class="progress">
+                        <div class="bar" style="width: 90%;"></div>
+                    </div>
+                </div>
+                <div class="skill">
+                    <p>Programming & Scripting</p>
+                    <div class="progress">
+                        <div class="bar" style="width: 85%;"></div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
-    <!-- Expertise / Skills Section -->
-    <section id="expertise" class="section">
-        <div class="container">
-            <h2>Expertise & Skills</h2>
-            <ul>
-                <li><strong>Security Operations & SOC:</strong> Incident response, threat hunting, SIEM/SOAR, IDS/IPS, penetration testing</li>
-                <li><strong>Cloud Security:</strong> Azure, AWS, GCP, Defender XDR, Azure Sentinel, hybrid security, DevSecOps</li>
-                <li><strong>Automation & Orchestration:</strong> Terraform, Bicep, CI/CD pipelines, policy-as-code, log aggregation</li>
-                <li><strong>Containers & Platforms:</strong> Kubernetes, Docker, OpenShift, Linux (Red Hat, Ubuntu)</li>
-                <li><strong>Networking & Security Devices:</strong> Cisco, Juniper, Checkpoint, Palo Alto, F5, VPNs, Firewall management</li>
-                <li><strong>Programming & Scripting:</strong> Golang, Bash, PowerShell, Python, JavaScript, Rust, Haskell</li>
-            </ul>
-        </div>
-    </section>
-
-    <!-- Services Section -->
-    <section id="services" class="section">
-        <div class="container">
-            <h2>Services</h2>
-            <ul>
-                <li>Security Operations & SOC Advisory</li>
-                <li>Cloud Security & Compliance Assessments (Azure, AWS, Hybrid)</li>
-                <li>DevSecOps & Automation Integration</li>
-                <li>Incident Response & Threat Hunting</li>
-                <li>Penetration Testing & Vulnerability Management</li>
-                <li>Infrastructure & Kubernetes Security</li>
-            </ul>
-        </div>
-    </section>
-
-    <!-- Experience Section -->
     <section id="experience" class="section">
         <div class="container">
             <h2>Professional Experience</h2>
 
-            <!-- Current Role -->
-            <article class="experience-item">
-                <h3>Senior Security Operations Analyst</h3>
-                <p><strong>Office of the Superintendent of Financial Institutions (OSFI) — Ottawa</strong><br>
-                    April 2023 – Present</p>
-                <ul>
-                    <li>Led security incident handling: phishing, malware, identity compromise, cloud misconfigurations.</li>
-                    <li>Proactive threat hunting using Azure Sentinel, Microsoft Defender XDR, and custom KQL queries.</li>
-                    <li>Developed and tuned SIEM detection rules to reduce false positives and improve alert quality.</li>
-                    <li>Designed and implemented SOAR automation playbooks, reducing MTTD and MTTR.</li>
-                    <li>Administered Microsoft Defender XDR for endpoint, identity, email, and cloud protection.</li>
-                    <li>Performed cloud security risk assessments and compliance audits (NIST, PBMM).</li>
-                    <li>Implemented DevSecOps security controls in CI/CD pipelines.</li>
-                    <li>Executed penetration testing and adversary emulation using MITRE CALDERA.</li>
-                </ul>
-            </article>
+            <div class="timeline">
+                <div class="timeline-item">
+                    <h3>Senior Security Operations Analyst</h3>
+                    <span>Office of the Superintendent of Financial Institutions — Ottawa | April 2023 – Present</span>
+                    <ul>
+                        <li>Led security incident handling including phishing, malware, identity compromise, and cloud misconfigurations.</li>
+                        <li>Conducted proactive threat hunting using Azure Sentinel and Microsoft Defender XDR.</li>
+                        <li>Developed SIEM detection rules, improved alert quality, and reduced false positives.</li>
+                        <li>Implemented SOAR automation playbooks to reduce MTTD and MTTR.</li>
+                        <li>Administered Microsoft Defender XDR across endpoint, identity, email, and cloud workloads.</li>
+                        <li>Performed cloud security risk assessments and compliance audits aligned with NIST and PBMM frameworks.</li>
+                        <li>Implemented DevSecOps security controls in CI/CD pipelines, including compliance-as-code.</li>
+                        <li>Executed penetration testing and adversary emulation (MITRE CALDERA).</li>
+                    </ul>
+                </div>
 
-            <!-- Previous Roles -->
-            <article class="experience-item">
-                <h3>Network Infrastructure Specialist</h3>
-                <p><strong>Office of the Superintendent of Financial Institutions (OSFI) — Ottawa</strong><br>
-                    June 2021 – April 2023</p>
-                <ul>
-                    <li>Operated and secured hybrid cloud infrastructure supporting Azure and on-premises environments.</li>
-                    <li>Managed IAM via Azure AD and ADFS with least-privilege access.</li>
-                    <li>Implemented Azure Cloud Landing Zones (CAF-ELZ) with governance and security baselines.</li>
-                    <li>Supported DevSecOps automation using Bicep and Azure DevOps.</li>
-                    <li>Secured containerized workloads (Docker, Kubernetes) and cloud data platforms.</li>
-                    <li>Managed endpoint compliance using Microsoft Intune.</li>
-                </ul>
-            </article>
+                <div class="timeline-item">
+                    <h3>Network Infrastructure Specialist</h3>
+                    <span>Office of the Superintendent of Financial Institutions — Ottawa | June 2021 – April 2023</span>
+                    <ul>
+                        <li>Operated and secured hybrid cloud infrastructure supporting Azure and on-premises workloads.</li>
+                        <li>Managed identity and access (Azure AD, ADFS) with least-privilege access and federation with partners.</li>
+                        <li>Implemented Azure Cloud Landing Zones (CAF-ELZ) with governance, security baselines, and compliance guardrails.</li>
+                        <li>Supported DevSecOps automation using Infrastructure as Code (Bicep) and Azure DevOps.</li>
+                        <li>Secured containerized workloads (Docker, Kubernetes) and cloud-native data platforms.</li>
+                        <li>Maintained endpoint and device compliance with Microsoft Intune.</li>
+                    </ul>
+                </div>
 
-            <article class="experience-item">
-                <h3>Platform Optimization Specialist</h3>
-                <p><strong>Statistics Canada — Ottawa</strong><br>
-                    November 2020 – June 2021</p>
-                <ul>
-                    <li>Maintained secure cloud and hybrid analytics platforms.</li>
-                    <li>Managed Azure Kubernetes clusters and hardened Docker containers for Python/R workloads.</li>
-                    <li>Maintained Linux analytics platforms with hardening, patching, and configuration best practices.</li>
-                    <li>Optimized GPU/CUDA and HPC clusters for AI/ML workloads.</li>
-                </ul>
-            </article>
+                <div class="timeline-item">
+                    <h3>Platform Optimization Specialist</h3>
+                    <span>Statistics Canada — Ottawa | November 2020 – June 2021</span>
+                    <ul>
+                        <li>Operated and maintained secure cloud and hybrid analytics platforms.</li>
+                        <li>Managed Azure Kubernetes clusters and hardened Docker containers for R/Python workloads.</li>
+                        <li>Maintained Linux-based analytics platforms with system hardening, patching, and configuration best practices.</li>
+                        <li>Optimized GPU/CUDA and HPC clusters for AI/ML workloads.</li>
+                    </ul>
+                </div>
 
-            <article class="experience-item">
-                <h3>SecOps / Security Architect</h3>
-                <p><strong>City of Laval — Montreal</strong><br>
-                    November 2015 – November 2020</p>
-                <ul>
-                    <li>Secured cloud environments (Azure, AWS) with logging, monitoring, and alerting.</li>
-                    <li>Hardened Kubernetes, OpenShift, and Linux platforms.</li>
-                    <li>Built CI/CD pipelines with Terraform and automation scripts (Bash, PowerShell, Golang).</li>
-                    <li>Designed hybrid cloud architectures with secure connectivity and compliance enforcement.</li>
-                </ul>
-            </article>
+                <div class="timeline-item">
+                    <h3>SecOps / Security Architect</h3>
+                    <span>City of Laval — Montreal | November 2015 – November 2020</span>
+                    <ul>
+                        <li>Secured cloud and hybrid infrastructure (Azure, AWS) with logging, metrics, and alerting.</li>
+                        <li>Hardened container platforms (Kubernetes, OpenShift, Docker) and Linux systems (Red Hat).</li>
+                        <li>Developed CI/CD pipelines and infrastructure-as-code (Terraform) with embedded security checks.</li>
+                        <li>Architected hybrid cloud integrations and ensured secure connectivity, policy enforcement, and visibility.</li>
+                        <li>Supported development teams in resolving security-related application and backend issues.</li>
+                    </ul>
+                </div>
 
-            <article class="experience-item">
-                <h3>SharePoint Security & Cloud Specialist</h3>
-                <p><strong>City of Laval — Montreal</strong><br>
-                    November 2012 – 2015</p>
-                <ul>
-                    <li>Managed multi-farm SharePoint environment with secure access and RBAC.</li>
-                    <li>Administered ADFS authentication and single sign-on for internal/external users.</li>
-                    <li>Maintained cloud security best practices for SharePoint Online and on-premises.</li>
-                    <li>Integrated monitoring with SOC tools and SIEM platforms.</li>
-                </ul>
-            </article>
+                <div class="timeline-item">
+                    <h3>SharePoint Security & Cloud Specialist</h3>
+                    <span>City of Laval — Montreal | November 2012 – 2015</span>
+                    <ul>
+                        <li>Managed multi-farm SharePoint environment with secure configuration and role-based access control.</li>
+                        <li>Administered ADFS authentication and identity federation with secure single sign-on.</li>
+                        <li>Maintained SharePoint Online and on-premises security practices and monitoring.</li>
+                        <li>Integrated monitoring systems with SOC tools and SIEM platforms for proactive detection.</li>
+                    </ul>
+                </div>
 
-            <article class="experience-item">
-                <h3>Systems & Security Administrator</h3>
-                <p><strong>City of Laval — Montreal</strong><br>
-                    November 2008 – January 2012</p>
-                <ul>
-                    <li>Managed Windows and Linux servers, patching, hardening, and monitoring.</li>
-                    <li>Maintained Symantec antivirus, system monitoring, and SIEM integration.</li>
-                    <li>Conducted vulnerability management, incident response, and remediation coordination.</li>
-                </ul>
-            </article>
+                <div class="timeline-item">
+                    <h3>Systems & Security Administrator</h3>
+                    <span>City of Laval — Montreal | November 2008 – January 2012</span>
+                    <ul>
+                        <li>Managed Windows and Linux servers, hardening, patching, and monitoring.</li>
+                        <li>Maintained Symantec antivirus servers and integrated logs into SIEM platforms.</li>
+                        <li>Conducted vulnerability management, incident triage, and remediation coordination.</li>
+                    </ul>
+                </div>
 
-            <article class="experience-item">
-                <h3>Database & Security Manager / Administrator</h3>
-                <p><strong>CSC Canada, Covansys, Wyeth Pharma / Pfizer — Montreal</strong><br>
-                    2005 – 2008</p>
-                <ul>
-                    <li>Managed SQL/Oracle databases with secure configuration and access controls.</li>
-                    <li>Implemented monitoring and alerting for security events via SIEM.</li>
-                    <li>Maintained infrastructure, network, and database security.</li>
-                </ul>
-            </article>
+                <div class="timeline-item">
+                    <h3>Database & Security Manager / Administrator</h3>
+                    <span>CSC Canada, Covansys, Wyeth Pharma / Pfizer — Montreal | 2005 – 2008</span>
+                    <ul>
+                        <li>Maintained and secured SQL and Oracle databases with access controls and secure configuration.</li>
+                        <li>Integrated logs into SIEM for anomaly detection and incident monitoring.</li>
+                        <li>Applied patching and vulnerability management to mitigate risks.</li>
+                    </ul>
+                </div>
 
-            <article class="experience-item">
-                <h3>Network & Security Administrator / Senior Network Administrator</h3>
-                <p><strong>Tac Inc, NexInnovation — Montreal</strong><br>
-                    2000 – 2001</p>
-                <ul>
-                    <li>Secured network infrastructure, VPNs, firewalls, and IDS/IPS monitoring.</li>
-                    <li>Configured Windows/Linux servers and Active Directory securely.</li>
-                    <li>Monitored network traffic and performed incident response.</li>
-                </ul>
-            </article>
+                <div class="timeline-item">
+                    <h3>Network & Security Administrator / Senior Network Administrator</h3>
+                    <span>Tac Inc, NexInnovation — Montreal | 2000 – 2001</span>
+                    <ul>
+                        <li>Secured network infrastructure including VPNs, firewalls, and IDS/IPS monitoring.</li>
+                        <li>Configured Windows/Linux servers and Active Directory with secure practices.</li>
+                        <li>Monitored network traffic and performed incident detection and response.</li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </section>
 
-    <!-- Education & Certifications Section -->
     <section id="education" class="section">
         <div class="container">
             <h2>Education & Certifications</h2>
@@ -185,7 +178,7 @@
                 <li>SANS | GIAC – GCSA: Cloud Security Automation</li>
                 <li>Microsoft Certified: Azure Solutions Architect Expert (AZ-305)</li>
                 <li>Microsoft Certified: Azure Administrator Associate (AZ-104)</li>
-                <li>TOGAF 9 Enterprise Architecture</li>
+                <li>TOGAF 9 Enterprise Architecture Certification</li>
                 <li>Cisco Certified Network Associate (CCNA)</li>
                 <li>Microsoft Certified Professional (MCP), MCSA, MCSE</li>
                 <li>University Equivalency Certificate – Ministère de l’Immigration du Québec</li>
@@ -194,7 +187,6 @@
         </div>
     </section>
 
-    <!-- Footer -->
     <footer id="footer">
         <div class="container">
             <p>© Adil Hanifi — Cloud & Security Architect</p>
